# python-ros-boilerplate

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: py_sample.launch
script/: sample_node.py
